--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,13 @@
                 <version>0.6.1-SNAPSHOT</version>
             </dependency>
 
+            <!-- ITs -->
+            <dependency>
+                <groupId>com.okta.sdk</groupId>
+                <artifactId>okta-sdk-integration-tests</artifactId>
+                <version>0.6.1-SNAPSHOT</version>
+            </dependency>
+
             <!-- Examples -->
             <dependency>
                 <groupId>com.okta.sdk</groupId>
