[maven-release-plugin] prepare release okta-sdk-root-0.7.0

--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
     <groupId>com.okta.sdk</groupId>
     <artifactId>okta-sdk-root</artifactId>
-    <version>0.7.0-SNAPSHOT</version>
+    <version>0.7.0</version>
     <packaging>pom</packaging>
 
     <name>Okta Java SDK</name>
@@ -63,36 +63,36 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-api</artifactId>
-                <version>0.7.0-SNAPSHOT</version>
+                <version>0.7.0</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-impl</artifactId>
-                <version>0.7.0-SNAPSHOT</version>
+                <version>0.7.0</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-api-swagger-templates</artifactId>
-                <version>0.7.0-SNAPSHOT</version>
+                <version>0.7.0</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-httpclient</artifactId>
-                <version>0.7.0-SNAPSHOT</version>
+                <version>0.7.0</version>
             </dependency>
 
             <!-- ITs -->
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-integration-tests</artifactId>
-                <version>0.7.0-SNAPSHOT</version>
+                <version>0.7.0</version>
             </dependency>
 
             <!-- Examples -->
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-examples-quickstart</artifactId>
-                <version>0.7.0-SNAPSHOT</version>
+                <version>0.7.0</version>
             </dependency>
 
             <!-- Logging -->
@@ -236,11 +236,15 @@
                         <dependency>
                             <groupId>com.okta.sdk</groupId>
                             <artifactId>okta-api-swagger-templates</artifactId>
-                            <version>0.7.0-SNAPSHOT</version>
+                            <version>0.7.0</version>
                         </dependency>
                     </dependencies>
                 </plugin>
             </plugins>
         </pluginManagement>
     </build>
+
+  <scm>
+    <tag>okta-sdk-root-0.7.0</tag>
+  </scm>
 </project>
