quick hacking to hide nested models

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -2508,6 +2508,9 @@
       ],
       "x-okta-tags": [
         "User"
+      ],
+      "x-okta-nested": [
+        "profile"
       ]
     },
     "UserActivationToken": {
