--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -75,39 +75,25 @@
             <version>1.0.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>de.sstoehr</groupId>
+            <artifactId>har-reader</artifactId>
+            <version>2.0.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock</artifactId>
+            <version>2.8.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-
-    <build>
-        <testResources>
-            <testResource>
-                <directory>src/test/resources</directory>
-                <filtering>true</filtering>
-                <includes>
-                    <include>package.json</include>
-                </includes>
-            </testResource>
-            <testResource>
-                <directory>src/test/resources</directory>
-                <filtering>false</filtering>
-                <excludes>
-                    <exclude>package.json</exclude>
-                </excludes>
-            </testResource>
-        </testResources>
-    </build>
 
     <profiles>
         <profile>
-            <!-- This profile configures the Node.js based test-server -->
-            <id>sdk-test-server</id>
+            <id>mock-server</id>
             <properties>
-                <node.version>v8.1.2</node.version>
-                <yarn.version>v0.27.1</yarn.version>
-                <node.install.directory>${project.build.directory}/node-${node.version}</node.install.directory>
                 <okta.use.testServer>true</okta.use.testServer>
-                <okta.testServer.ref>more-debugging</okta.testServer.ref>
-                <okta.testServer.verbose>false</okta.testServer.verbose>
-                <okta.testServer.allScenarios>false</okta.testServer.allScenarios>
             </properties>
             <build>
                 <plugins>
@@ -117,36 +103,8 @@
                         <configuration>
                             <systemPropertyVariables>
                                 <okta.use.testServer>${okta.use.testServer}</okta.use.testServer>
-                                <okta.testServer.bin>node_modules/.bin/okta-sdk-test-server</okta.testServer.bin>
-                                <okta.testServer.verbose>${okta.testServer.verbose}</okta.testServer.verbose>
                             </systemPropertyVariables>
                         </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>com.github.eirslett</groupId>
-                        <artifactId>frontend-maven-plugin</artifactId>
-                        <version>1.4</version>
-                        <configuration>
-                            <nodeVersion>${node.version}</nodeVersion>
-                            <yarnVersion>${yarn.version}</yarnVersion>
-                            <installDirectory>${node.install.directory}</installDirectory>
-                            <workingDirectory>${project.build.testOutputDirectory}</workingDirectory>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>install node and yarn</id>
-                                <goals>
-                                    <goal>install-node-and-yarn</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>yarn install</id>
-                                <phase>pre-integration-test</phase>
-                                <goals>
-                                    <goal>yarn</goal>
-                                </goals>
-                            </execution>
-                        </executions>
                     </plugin>
                 </plugins>
             </build>
