--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule ".submodules/okta-sdk-test-server"]
 	path = .submodules/okta-sdk-test-server
-	url = git@github.com:okta/okta-sdk-test-server.git
+	url = https://github.com/okta/okta-sdk-test-server.git
