--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>com.okta</groupId>
         <artifactId>okta-parent</artifactId>
-        <version>3-SNAPSHOT</version>
+        <version>2</version>
         <relativePath>../okta-java-parent</relativePath>
     </parent>
 
