--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -3621,10 +3621,7 @@
     "ApplicationSettings": {
       "properties": {
         "app": {
-          "$ref": "#/definitions/ApplicationSettingsApplication",
-          "additionalProperties": {
-            "type": "object"
-          }
+          "$ref": "#/definitions/ApplicationSettingsApplication"
         },
         "notifications": {
           "$ref": "#/definitions/ApplicationSettingsNotifications"
@@ -5153,6 +5150,9 @@
         "buttonField": {
           "type": "string"
         },
+        "loginUrlRegex": {
+          "type": "string"
+        },
         "passwordField": {
           "type": "string"
         },
@@ -5207,10 +5207,13 @@
         "extraFieldValue": {
           "type": "string"
         },
+        "loginUrlRegex": {
+          "type": "string"
+        },
         "passwordSelector": {
           "type": "string"
         },
-        "url": {
+        "targetUrl": {
           "type": "string"
         },
         "userNameSelector": {
